--- a/src/index.ejs
+++ b/src/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="{%= o.webpackConfig.metadata.title %}">
+    <meta name="description" content="<%= webpackConfig.metadata.title %>">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
@@ -27,24 +27,24 @@
     <!-- You can customize the default -->
     <meta name="theme-color" content="#656970">
 
-    <title>{%= o.webpackConfig.metadata.title %}</title>
+    <title><%= webpackConfig.metadata.title %></title>
 
     <!-- Stylesheets -->
     <!-- Generated CSS stylesheets will be added by webpack: extract-text-webpack-plugin -->
 
     <!-- base url -->
-    <base href="{%= o.webpackConfig.metadata.baseUrl %}">
+    <base href="<%- webpackConfig.metadata.baseUrl %>">
 </head>
 <body>
 <app>
     Loading ...
 </app>
 
-{% if (o.webpackConfig.metadata.ENV === 'development') { %}
+<% if (webpackConfig.metadata.ENV === "development") { %>
 <!-- Webpack Dev Server reload -->
 <script
-    src="http://{%= o.webpackConfig.metadata.host %}:{%= o.webpackConfig.metadata.port %}/webpack-dev-server.js"></script>
-{% } %}
+    src="http://<%- webpackConfig.metadata.host %>:<%- webpackConfig.metadata.port %>/webpack-dev-server.js"></script>
+<% } %>
 
 <!-- Generated bundle scripts will be injected by webpack: html-webpack-plugin -->
 </body>
