--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,1 +1,5 @@
-<foo></foo>
+Hello AngularJS Webpack Starter!
+<br />
+<div ng-show="vm.isCurrentState('home')">
+    <div ui-view="home"></div>
+</div>
