dev en cours ng mat

--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,4 +1,17 @@
-Hello AngularJS Webpack Starter!
+<md-content layout="row" ng-cloak>
+    <md-toolbar>
+        <div class="md-toolbar-tools">
+            <img class="logo" src="./assets/images/logo-bgl.png" layout-fill-gt="20"/>
+            <span flex></span>
+            <span class="bank-label">My Bank </span>
+            <span class="bank-separator"> : </span>
+            <span>(+352) 42 42-65 01</span>
+            <span class="separator"></span>
+            <span class="text-link">Logout</span>
+        </div>
+    </md-toolbar>
+</md-content>
+
 <br />
 <div ng-show="vm.isCurrentState('home')">
     <div ui-view="home"></div>
